test/e2e/features/cors/testdata/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: cors-gateway
  namespace: kgateway-base
spec:
  gatewayClassName: kgateway
  listeners:
    - protocol: HTTP
      port: 80
      name: http
      allowedRoutes:
        namespaces:
          from: All
