test/e2e/features/cors/testdata/httproutes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: cors-route-1
  namespace: kgateway-base
spec:
  parentRefs:
    - name: cors-gateway
      namespace: kgateway-base
  hostnames:
    - "example.com"
  rules:
    - backendRefs:
        - name: cors-simple-svc
          port: 8080
      matches:
      - path:
          type: PathPrefix
          value: /path1
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: cors-route-2
  namespace: kgateway-base
spec:
  parentRefs:
    - name: cors-gateway
      namespace: kgateway-base
  hostnames:
    - "example.com"
  rules:
    - name: rule0
      matches:
      - path:
          type: PathPrefix
          value: /path2
      backendRefs:
        - name: cors-simple-svc
          port: 8080
    - name: rule1
      matches:
      - path:
          type: PathPrefix
          value: /cors-disabled
      backendRefs:
        - name: cors-simple-svc
          port: 8080
