test/e2e/features/cors/testdata/tp-gw-cors.yaml
apiVersion: gateway.kgateway.dev/v1alpha1
kind: TrafficPolicy
metadata:
  name: cors-gw-policy
  namespace: kgateway-base
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: cors-gateway
  cors:
    allowOrigins:
      - https://notexample.com
    allowMethods:
      - GET
      - POST
    allowHeaders:
      - Content-Type
      - Authorization
