test/e2e/features/cors/testdata/tp-route-cors.yaml
apiVersion: gateway.kgateway.dev/v1alpha1
kind: TrafficPolicy
metadata:
  name: cors-route-policy
  namespace: kgateway-base
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: cors-route-1
  cors:
    allowOrigins:
      - https://notexample.com
      - https://*.a.b
      - https://*.edu
    allowMethods:
      - GET
      - POST
      - DELETE
    allowHeaders:
      - x-custom-header
---
apiVersion: gateway.kgateway.dev/v1alpha1
kind: TrafficPolicy
metadata:
  name: cors-disable-policy
  namespace: kgateway-base
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: cors-route-2
    sectionName: rule1
  cors:
    disable: {}
